--- a/Formal.html
+++ b/Formal.html
@@ -601,7 +601,7 @@ Adding a variety in height to the garden </p>
         </p>
 <p> <h1>Knot</h1> 
         A Knot Garden dates back to the middle ages, much like a monastic garden it consists of herbs, medicinal plants and is similar in that it is often referred to as “the embroidery of the earth”. Knot gardens are the predecessor of Parterre Gardens. </p>
-         <img src="Parterre3.jpg" alt=centered width="350" height="250""</p>
+         <img src="parterre3.jpg" alt=centered width="350" height="250""</p>
 <p> Symmetrical beds, evergreen hedges neatly clipped in repeating ornamental designs with gravel paths throughout.</p> 
 
 <p> These gardens require a high level of maintenance and upkeep. </p> 
