--- a/USA18.html
+++ b/USA18.html
@@ -575,7 +575,7 @@ text-align: center; /* Centers text horizontally */
 
         <p> <h2> Colonial Garden Design </h2> 
             Rural gardens were planted surrounding structures: buildings, fences, livestock pens, walkways and surrounding work areas.</p>
-              <img src="derbygarden1795.jpg" alt=centered width="350" height="250"</p>
+              <img src="DerbyGarden1795.jpg" alt=centered width="350" height="250"</p>
             <p>   
                 <p> <h2> Mount Vernon </h2> The 2,100 acre plantation of Fairfax County, on the edge of the Potomac River in Virgina, orignated in 1631 until 1861 before it was passed over to the Mount Vernon Ladies Association. George Washington, divided the property into five segments; the Mansion House, Muddy Hole, Union, River Farms, Dogue Run, which in all totalled 8,000 acres. The east lawn of the Mansion House, had a grove of trees that were translpanted from the property to create groves from the north and south sides of the house. </p>
                 <img src="mtvernon.jpg" alt=centered width="350" height="250"</p>
