--- a/Dutch.html
+++ b/Dutch.html
@@ -571,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>18th Century Dutch Garden Design</h1>
         <p>Holland was undergonig a roaring flower market when Tulip propogation flourished in the 1600's. Dutch gardens are characterized in color-schemed, mass plantings of (5 dozen) bulbs. Traditional gardens would have clusters, in grouped patterns (at least 12 bulbs a group). 
         </p>
-         <img src="Dutchtulip.jpg" alt=centered width="500" height="350"" 
+         <img src="DutchTulip.jpg" alt=centered width="500" height="350"" 
         <p> Flowers in a Dutch Garden: </p>
         <p><h3>Anemones</h3></p>
         <p> <h3>Calla Lily</h3></p>
@@ -582,7 +582,7 @@ text-align: center; /* Centers text horizontally */
         <p> <h3>Tulips</h3></p>
 
     <p> The Formal Dutch Gardens would have rows of flowers, and ornamental hedges. The strucutre would be enhanced with canals and fountains were unique because of their order, seasonal planting and precision.</p> 
-         <img src="Dutchgarden.jpg" alt=centered width="500" height="350"</p> 
+         <img src="DutchGarden.jpg" alt=centered width="500" height="350"</p> 
     </div>
 
     <!-- Sidebar -->
