--- a/Germany.html
+++ b/Germany.html
@@ -581,7 +581,7 @@ text-align: center; /* Centers text horizontally */
          <p> <h2>Fasanerie </h2> Baroque Park style gardens, with serpentine paths, English landscaping and a Japanese teahouse. The property consists of a variety of tree species, including a section dedicated to Carl Linnaeus. 
         </p>
          <img src="Fasanerie.jpg" alt=centered width="500" height="350"</p> 
-        <p> <h2>Wurzburg</h2> <img src="wurzburg.jpg" alt=centered width="500" height="350"</p>The Gardens are known as "Hofgarten", with a very formal, Baroque style near the structure. As it extends outwards it transforms to a English style , romantic meadow. Originating in 1759, this has become a UNESCO World Heeritage Site. There are two monuments of greek mythology, vases, an Orangery, three gates leading to the Court Gardens, and a Pavillion.
+        <p> <h2>Wurzburg</h2> <img src="Wurzburg.jpg" alt=centered width="500" height="350"</p>The Gardens are known as "Hofgarten", with a very formal, Baroque style near the structure. As it extends outwards it transforms to a English style , romantic meadow. Originating in 1759, this has become a UNESCO World Heeritage Site. There are two monuments of greek mythology, vases, an Orangery, three gates leading to the Court Gardens, and a Pavillion.
 
         </p>
         <p> <h2>Stuttgart</h2>
