--- a/Germany.html
+++ b/Germany.html
@@ -587,7 +587,7 @@ text-align: center; /* Centers text horizontally */
         <p> <h2>Stuttgart</h2>
             <iframe width="500" height="315" src="https://www.youtube-nocookie.com/embed/UTROb4B_ZKA?si=k7BTnbhXqXxTBujt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </p>
-        <p> <h2>Karlsruhe</h2><img src="karlsruhe.jpg" alt=centered width="500" height="350"</p> The Sclossgarten was constructed in 1715 by Margrave Karl Wilhelm. The Baroque garden was planted with tulips and traditional English landscaping, along with an Orangery and a Chinese garden. A botanical garden was added in 1808 and for the 300th anniversary a wooden pavilion was constructed in 2015. The palace property is unique in that it is circular in shape, and the entire property radiates outward from the central structure, surrounded by lakes, and evergreen forests. 
+        <p> <h2>Karlsruhe</h2><img src="Karlsruhe.jpg" alt=centered width="500" height="350"</p> The Sclossgarten was constructed in 1715 by Margrave Karl Wilhelm. The Baroque garden was planted with tulips and traditional English landscaping, along with an Orangery and a Chinese garden. A botanical garden was added in 1808 and for the 300th anniversary a wooden pavilion was constructed in 2015. The palace property is unique in that it is circular in shape, and the entire property radiates outward from the central structure, surrounded by lakes, and evergreen forests. 
         </p>
         
       <p> <h2>Friedenstein</h2><img src="Schloss-Friedenstein.jpg" alt=centered width="500" height="350"</p>
