--- a/Spain.html
+++ b/Spain.html
@@ -581,7 +581,7 @@ text-align: center; /* Centers text horizontally */
          </p>
           
            <img src="Madrid2.jpg" alt=centered width="500" height="350"</p>
-            <img src="Madrid1.jpg" alt=centered width="500" height="350"</p>
+            <img src="madrid1.jpg" alt=centered width="500" height="350"</p>
     </div>
 
     <!-- Sidebar -->
