--- a/Sweden.html
+++ b/Sweden.html
@@ -579,7 +579,7 @@ text-align: center; /* Centers text horizontally */
 Histroically the grounds have been used for breeding horses, and began its royal residences since the 1500's. The Palace property is surrounded by a moat, and within it,trees are planted symmetrically across from each other in rows on neatly trimmed lawns, with manicured hedges and larger ones on each side of the building. The lawns extend on each side of an avenue, that has small grass patches and shrubs. The courtyard has flower bedding framing the walking paths.  
         </p>
        
-        <p> <h2>Rosendalsvasen 200 ar</h2> <img src="Rosendalvase.jpg" alt=centered width="500" height="350"</p><p>
+        <p> <h2>Rosendalsvasen 200 ar</h2> <img src="RosendalVase.jpg" alt=centered width="500" height="350"</p><p>
             The story of the Lost Egg is having it's 200th anniversary. A magnificent granite vase was comissioned for Karl XIV Johan to commemorate the Swedish Empire's volcanic porphyry mining industry in the early 1800's. It stands 3.67 meters in height and 3.59 in width. Made of Älvdalen granite, a decorative hard rock. It had eggs placed in the vase. On January 16th, 1826 the king invited guests to the Rosendal Palace while under construction, purely out of excitement to share the vase with family. Yet, the decorative eggs dissapeared. Replacements were attempted but nothing since has been built that is equivalent to the original. 200 years later, the eggs will be reconstructed and mounted in the Spring of 2026. 
         </p>
           
