--- a/Contemporary.html
+++ b/Contemporary.html
@@ -568,11 +568,11 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>Contemporary Garden Design</h1>   <img src="modern.jpg" alt=centered width="500" height="350"</p><p>
+        <h1>Contemporary Garden Design</h1>   <img src="Modern.jpg" alt=centered width="500" height="350"</p><p>
         <p> Contemporary garden design is well suited to modern and new age landscaping. These styles are insprired by Formal, Eastern and Italian terraces with some English Romantic design incorporated into the gardens. Recognizable characteristics include: gravel paths and stonework, a variety of wildflowers and flower beds, greenery, foliage, hedges and trees. The fountains can vary, but water is welcomed in the overall asthetic, creating a calming atmosphere. The designs add the element of light, as an entirely new concept invovled in the design. Many  urban environments, built for hosting events, will use contemporary designs that include a concrete feature, swimming pool, fireplace, and patio with seating. 
         </p>
           
-             <img src="moderngarden.jpg" alt="centered" width="350" height="350"</p>
+             <img src="Moderngarden.jpg" alt="centered" width="350" height="350"</p>
 
     </div>
 
