--- a/Bauhaus.html
+++ b/Bauhaus.html
@@ -568,7 +568,7 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>Bauhaus Garden Design</h1><img src="Bauhaus.jpg" alt=centered width="500" height="350"</p><p>
+        <h1>Bauhaus Garden Design</h1><img src="bauhaus.jpg" alt=centered width="500" height="350"</p><p>
         <p> Originating in the 1930's for buildings, Bauhaus design's are sleek, contemporary and are influenced with simple and economical principals, while utlizing a balance of flora, wood, gravel and concrete. Geometric shapes are used in the orerall site design, as well as in the sculputres, stonework and gardens.  
         </p>
                    
