--- a/Lombardian.html
+++ b/Lombardian.html
@@ -571,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>Lombardian Garden Design</h1>
         <p>The region of Lombardy is unique with terrace gardens, olive trees, layers of landscapes with gravel paths, sculputes surrounded by flowering plants with Mediterranean architecture. The rich history and closeness with the natural environment in this vast region give the impression of endless options for garden lovers visit, and find inspiration.</p>
   
-    <p> <h2>Bald Cypresses of the Montanelli Gardens</h2> <img src="Montanelli_1.jpg" alt=centered width="550" height="350"</p>
+    <p> <h2>Bald Cypress' of the Montanelli Gardens</h2> <img src="montanelli_1.jpg" alt=centered width="550" height="350"</p>
         <p>
     Taxodium distichum, the Bald Cypress have a 2.3 m diameter and are 25 m tall, the largest tree in Lombardy. The Gardens covers 172 sq m and were completed in 1784, with additions of a Planetarium and Museum of Natural Sciences to the park.</p>
    
