--- a/Stuart.html
+++ b/Stuart.html
@@ -575,7 +575,7 @@ text-align: center; /* Centers text horizontally */
            <p><h2>Formal</h2>Avenues symbolized status, inspired by the palace of Versailles.</p>
                <p><h2>Terraces</h2>Italian terraces gave an organization of slopes, and controlled irregular natural landscapes.</p>
                    <p><h2>Parterres</h2> 
-                    <img src="Anholt.jpg" alt="centered" width="200" height="350"</p><p>An evolution of the Tudor knots, these small hegdes are neatly manicured. 
+                    <img src="anholt.jpg" alt="centered" width="200" height="350"</p><p>An evolution of the Tudor knots, these small hegdes are neatly manicured. 
                    </p>
         <p><h2>Fountains</h2>Animation of the gardens by flowing water displys. </p>
             <p><h2>Topiary</h2>The expression of complete control of nature.</p>
