--- a/NewEngland.html
+++ b/NewEngland.html
@@ -617,7 +617,7 @@ List on the National Register of Historuc Places, the home of John S. Phipps was
     <p> <h3>Marble House' Garden</h3> 
     Designated as to the National Register of Historic Places and  a Landmark in 2006, the Gilded Age summer cottage estate of William Kissam Vanderbilt began work in 1888 and was completed in 1892. There is a Chinese Tea house modeled by the 12th century Song Dynasty in the lawn. The grounds were designed by landscape architect Ernest W. Bowditch. 
 </p>
-</p><img src="MarbleHouse.jpg" alt=centered width="550" height="350"</p>
+</p><img src="MarbleHouse1.jpg" alt=centered width="550" height="350"</p>
     <p> <h3>Rosecliff's Garden</h3>
      </p>Built it 1902 for Theresa Fair Oelrichs, 
      The stairway drops to a terraced lawn facing the ocean where The Breakers Estate is visible from the shore. A terrace garden is planted around a central fountain. Parterres lined flower beds are filled with Roses, and the pathways are covered in pergolas. The lawn facing the ocean has statues of swans, Cherubs and Eagles placed throughout.
