--- a/History.html
+++ b/History.html
@@ -463,7 +463,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\0015.jpg" alt="Kalamoir"style="display: block; margin: auto;" width="350" height="500"><h5> Wildflowers in Kalamoir Regional Park </h5>
+    <img src="0015.jpg" alt="Kalamoir"style="display: block; margin: auto;" width="350" height="500"><h5> Wildflowers in Kalamoir Regional Park </h5>
     <h5></h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
