Valley Art.html

--- a/Valley Art.html
+++ b/Valley Art.html
@@ -392,20 +392,20 @@ text-align: center; /* Centers text horizontally */
             <h3>Art</h3></p>
       <h3>Rosa Damascena Aurora</h3>
       <p>Roma Damascena aurora is  engraving by Pierre Joseph Redoute, the french painter who is reffered to as "le Raphael des Fleurs". </p>
-      <img src="IMG_0591.jpg"alt="Rosa Dameseena Aurora"  width="400" height="550">
+      <img src="IMG_0591.jpg"alt="centered"  width="400" height="550">
       
     </div>
   </div>
 
       <p> A Watercolour painting from the the Canadian artist, Ruth Steinfatt</p>
     
-          <img src="Ruth Steinfatt.jpg" alt="Pressed Flowers"  width="550" height="550"></p>
+          <img src="Ruth Steinfatt.jpg" alt="centered"  width="550" height="550"></p>
              <a href="https://wildwoodwatercolours.blogspot.com/">White Lilies</p> 
     <img src="Iris in blue 001.jpg" alt="Pressed Flowers"  width="550" height="550"></p>
              <a href="https://wildwoodwatercolours.blogspot.com/">Iris in blue</p> </a>
 
    <p> Angie Strauss Artwork of Florals</p>
-    <img src="White-peony.jpg" alt="Pressed Flowers"  width="550" height="550"></p>
+    <img src="White-peony.jpg" alt="centered"  width="550" height="550"></p>
              <a href="  https://www.angiestrauss.com/florals/">Sentimental Reasons</p> 
     <img src="sentimental-reasons.jpg" alt="Pressed Flowers"  width="550" height="550"></p>
              <a href="https://www.angiestrauss.com/florals/">White Peonies</p> </a>
