Bridal Bouquets.html

--- a/Bridal Bouquets.html
+++ b/Bridal Bouquets.html
@@ -447,7 +447,7 @@ text-align: center; /* Centers text horizontally */
   <div class="column">
 <div class="container">
 <p><h3>Muriel Vanderbilt</h3> The American Society wedding at Newport, to Frederick Cameron Church Jr. had the veil of Marie Antoinette purchased for the event. She carried a bouquet of Orchids and Gardenias. </p>
- <img src="Muriel-vanderbilt.jpg"  width="200" height="300">
+ <img src="muriel-vanderbilt.jpg"  width="200" height="300">
 </div></div>
 
 
@@ -491,7 +491,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="lavendarandlace.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="LavendarandLace.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.lavenderandlace.ca/our-gallery">Lavendar and Lace</a></div> 
     <h2></h2>
 </div>
@@ -499,7 +499,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="missionpark.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="MissionPark.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.missionparkflowersbc.com/wedding-bouquets">Mission Park Flower</a></div> 
     <h2></h2>
 </div>
