--- a/Contact.html
+++ b/Contact.html
@@ -466,6 +466,7 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Profile Header -->
     <div class="profile-header">
+      <img src="KelownaFlowerGardensCircle.jpg" alt="">
         <div class="profile-pic" style="background-image: style="background-image: url=('kelownaflowergardens')";>
         
         </div>
