--- a/Lombardian.html
+++ b/Lombardian.html
@@ -575,7 +575,7 @@ text-align: center; /* Centers text horizontally */
         <p>
     Taxodium distichum, the Bald Cypress have a 2.3 m diameter and are 25 m tall, the largest tree in Lombardy. The Gardens covers 172 sq m and were completed in 1784, with additions of a Planetarium and Museum of Natural Sciences to the park.</p>
    
-    <p><h2> Vedano al Lambro </h2>  <img src="Mirabello.jpg" alt=centered width="550" height="350"</p>
+    <p><h2> Vedano al Lambro </h2>  <img src="Mirabello1.jpg" alt=centered width="550" height="350"</p>
  <p>   Vedano al Lambro is a small village overlooking the Park of Monza. With centuries old trees, terraces' and Villa Mirabello built in the late 18th century. </p>
    
     <p> <h2>Cascina Rosa Botanical Gardens</h2>
