--- a/Home.html
+++ b/Home.html
@@ -143,7 +143,7 @@ text-align: center; /* Centers text horizontally */
   <button class="dropbtn" href="Home.html" class="active">Home</button>
     <div class="dropdown-content">
             <a href="Home.html">Home</a>
-         <a href="History.html"></a>
+         <a href="shop2.html"></a>
                     </div>
                   </div>
              
@@ -160,7 +160,7 @@ text-align: center; /* Centers text horizontally */
     <button class="dropbtn" href="About.html" class="active">About
          <div class="dropdown-content">
          <a href="About.html">About</a>
-      <a href="Boardmembers.html"></a>
+      <a href=".html"></a>
       <a href=".html"></a>
     </div>
   </div>
