--- a/Contact.html
+++ b/Contact.html
@@ -466,7 +466,7 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Profile Header -->
     <div class="profile-header">
-      <img src="KelownaFlowerGardensCircle.jpg" alt="">
+      <img src="KelownaFlowerGardensCircle.jpg" alt=""width="250" height="250">
         <div class="profile-pic" style="background-image: style="background-image: url=('kelownaflowergardens')";>
         
         </div>
