--- a/Contact.html
+++ b/Contact.html
@@ -461,7 +461,26 @@ text-align: center; /* Centers text horizontally */
 </head>
 
 <body>
+  <section style="text-align:center; padding:40px;">
+  <h2>Follow Kelowna Flower Gardens</h2>
 
+  <a href="https://www.instagram.com/kelownaflowergardens/"
+     target="_blank"
+     style="
+       display:inline-block;
+       margin-bottom:20px;
+       padding:12px 20px;
+       background:#F68686;
+       color:white;
+       text-decoration:none;
+       border-radius:30px;
+       font-weight:bold;
+     ">
+    📸 @kelownaflowergardens
+  </a>
+
+ 
+</section>
 <div class="container">
 
     <!-- Profile Header -->
