--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ text-align: center; /* Centers text horizontally */
 <div class="wrap">
 
 
-<header>
-<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<header class="site-header">
+<img src="01126.jpg" alt="Flowers of the Okanagan" class="hero-image" 
 <div class="header-text">
 <h1></h1>
 </div>
@@ -229,7 +229,7 @@ text-align: center; /* Centers text horizontally */
     </div>
   </div>
 
-</div>
+</header>
 <style>
 /* Add a white background color to the top navigation */
 .topnav {
