--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ text-align: center; /* Centers text horizontally */
 <div class="wrap">
 
 
-<header class="site-header">
-<img src="01126.jpg" alt="Flowers of the Okanagan" class="hero-image" 
+<header>
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
 <h1></h1>
 </div>
