--- a/GardenDesign.html
+++ b/GardenDesign.html
@@ -683,6 +683,7 @@ text-align: center; /* Centers text horizontally */
                 <button class="dropdown-btn">USA</button>
         <div class="dropdown-container">
             <a href="CentralPark.html">Central Park</a>
+           <a href="Rosegardens.html">Rose Gardens</a>
             <a href="NewEngland.html">New England</a>
             <a href="Biltmore.html">Biltmore Estate</a>
             <a href="USACapital.html">U.S. Capital Grounds</a>
