--- a/Valley Art.html
+++ b/Valley Art.html
@@ -433,7 +433,8 @@ text-align: center; /* Centers text horizontally */
 <p> Avalon Rose is a Canadian Made Skincare company that is available at the Kelwona Craft Market throughout the year. </p>
   </div>
 
- <  <div class="centered">img src="Avalon-Rose-Botanical.jpg" alt="Centered Image" style="display: block; margin: auto;" width="300" height="250"> </img>
+ <div class="centered">
+   <img src="Avalon-Rose-Botanical.jpg" alt="Centered Image" style="display: block; margin: auto;" width="300" height="250"> </img>
  <a href="https://avalonrosebotanicals.ca/product/botanical-perfume-vegan/">Botanical Perfume</p> </a>
  </div>
 
