--- a/About.html
+++ b/About.html
@@ -354,8 +354,8 @@ text-align: center; /* Centers text horizontally */
 <section>
   <div>
           <h2 id="features">About</h2>
-         <p> The Central Okanagan Flower & Garden Society is being introduced May 1st 2026. Our founder, Silken Rauhala has been part of different environmental organizations since she underwent a Bachelor of Science in Victoria, British Columbia. Participating in groups like the Univeristy of Victoria Parks Club, Trial Islands Restorations, Todd Inlent Remediation and many visits to Saanichs' Horticulture Center of the Pacific and of course, the Butchard Gardens.
-          She has always been interested in flora of all around the world and has documented types of species on trips that have extended from South America and remote regions of British Columbia's North, to the Great Lakes of Northern Ontario and the Coastal Pacific Region of Southern California. She hopes to bring her passion to the Okanagan, where she calls home, and to see what an enthusiatic group of people can grow this organization into the future.</p>
+         <p> The Kelowna Flower Garden Club is being introduced May 1st 2026. The founder, Silken Rauhala has been part of different environmental organizations since she underwent a Bachelor of Science in Victoria, British Columbia. Participating in groups like the Univeristy of Victoria Parks Club, Trial Islands Restorations, Todd Inlent Remediation and many visits to Saanichs' Horticulture Center of the Pacific and of course, the Butchard Gardens.
+          She has always been interested in flora of all around the world and has documented types of species on trips that have extended from South America and remote regions of British Columbia's North, to the Great Lakes of Northern Ontario and the Coastal Pacific Region of Southern California. She hopes to bring her passion to the Okanagan where she calls home, and to see how this organization can grow.</p>
 
 <p>
            <img src="CSC_0319.jpg" alt="Centered Image" style="display: block; margin: auto;" width="800" height="350"> </img>
