--- a/About.html
+++ b/About.html
@@ -358,7 +358,7 @@ text-align: center; /* Centers text horizontally */
           She has always been interested in flora of all around the world and has documented types of species on trips that have extended from South America and remote regions of British Columbia's North, to the Great Lakes of Northern Ontario and the Coastal Pacific Region of Southern California. She hopes to bring her passion to the Okanagan where she calls home, and to see how this organization can grow.</p>
 
 <p>
-           <img src="CSC_0319.jpg" alt="Centered Image" style="display: block; margin: auto;" width="800" height="350"> </img>
+           <img src="Silken.jpg" alt="Centered Image" style="display: block; margin: auto;" width="800" height="350"> </img>
          </p>
 
          </p>
