--- a/About.html
+++ b/About.html
@@ -140,10 +140,10 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Home.html" class="active">Main</button>
     <div class="dropdown-content">
-            <a href="Home.html">Home</a>
-         <a href="History.html"></a>
+            <a href="Home.html">Main</a>
+         <a href="Shop2.html"></a>
                     </div>
                   </div>
              
