--- a/Valley Art.html
+++ b/Valley Art.html
@@ -139,9 +139,9 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Home.html" class="active">Main</button>
     <div class="dropdown-content">
-            <a href="Home.html">Home</a>
+            <a href="Home.html">Main</a>
          <a href="History.html"></a>
                     </div>
                   </div>
