--- a/Bridal Bouquets.html
+++ b/Bridal Bouquets.html
@@ -140,7 +140,7 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Main.html" class="active">Main</button>
     <div class="dropdown-content">
             <a href="Home.html">Home</a>
          <a href="History.html"></a>
