--- a/Resources.html
+++ b/Resources.html
@@ -353,7 +353,7 @@ text-align: center; /* Centers text horizontally */
 <section>
           <h id="features"></h>
      
-<H2> References </H2>
+<H2> Resources </H2>
 <h3>Kew Royal Botanical Gardens</h3>
   <p> Much of this organization is inspired by the <a href="https://www.kew.org/kew-gardens">The Kew Royal Botanical Gardens</a> Which is a former royal estate, in Richmond (London), England. The Prince of Wales, Frederick Louis establsih a garden of exotic plannts in 1759. This grew to over 3,400 species, famously growing the collections that became known around the world. It is a center for Scientific Research and a place of internation plant exchange. Today there are over 28,680 taxa of living plants, over seven million dried plants in the Herbarium and over 130,000 volumes of prints and drawings of collections of tropical orchids, succulents and ferns. In 1965, a Botanical Garden was established outside Wakehurst Place, West Sussex. In 1974 the Kew Seed Bank was established, holding 16% of the worlds wild plant species.</p><p>
  <iframe title="vimeo-player" src="https://player.vimeo.com/video/175547075?h=a208b6eb87" alt="Centered Image" style="display: block; margin: auto;" width="640" height="360" frameborder="0" referrerpolicy="strict-origin-when-cross-origin" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"   allowfullscreen></iframe></p>
@@ -429,7 +429,7 @@ ArchitectureCourses.org
   <a href="Members.html">Members</a>
    <a href="Index.html">Index</a>
   <a href="ArchitectsofGardenDesign.html">Architect's of Garden Design</a>
-   <a href="Citations.html">Citations</a>
+   <a href="Citations.html">References</a>
 <a href="Members.html">Members</a>
 
 </div>
