--- a/Citations.html
+++ b/Citations.html
@@ -141,9 +141,9 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Home.html" class="active">Main</button>
     <div class="dropdown-content">
-            <a href="Home.html">Home</a>
+            <a href="Home.html">Main</a>
          <a href="History.html"></a>
                     </div>
                   </div>
@@ -569,7 +569,7 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>Citations</h1>
+        <h1>References</h1>
         <p> 200-åriga Rosendalsvasen Firades av Prinsessan Sofia. Till Kungahusets startsida. (n.d.). https://www.kungahuset.se/arkiv/nyheter/2025-12-03-200-ariga-rosendalsvasen-firades-av-prinsessan-sofia </p>
         <p>Admin. (2022, June 21). Garden history: What did the medieval gardens look like?. Star of Nature. https://starofnature.org/garden-history-what-did-medieval-gardens-look-like/</p> 
 <div>
