--- a/Dutch.html
+++ b/Dutch.html
@@ -140,9 +140,9 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Home.html" class="active">Main</button>
     <div class="dropdown-content">
-            <a href="Home.html">Home</a>
+            <a href="Home.html">Main</a>
          <a href="History.html"></a>
                     </div>
                   </div>
@@ -568,8 +568,8 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>18th Century Dutch Garden Design</h1>
-        <p>Holland was undergonig a roaring flower market when Tulip propogation flourished in the 1600's. Dutch gardens are characterized in color-schemed, mass plantings of (5 dozen) bulbs. Traditional gardens would have clusters, in grouped patterns (at least 12 bulbs a group). 
+        <h1>18th Century Garden Design of the Netherlands</h1>
+        <p>Holland was undergoing a roaring flower market when Tulip propogation flourished in the 1600's. Garden's in the Neterlands are characterized in color-schemed, mass plantings of (5 dozen) bulbs. Traditional gardens would have clusters, in grouped patterns (at least 12 bulbs a group). 
         </p>
          <img src="DutchTulip.jpg" alt=centered width="500" height="350"" 
         <p> Flowers in a Dutch Garden: </p>
@@ -634,15 +634,16 @@ text-align: center; /* Centers text horizontally */
         </div>
 
                 <!-- Dropdown 6 -->
-        <button class="dropdown-btn">18th Century</button>
+    <button class="dropdown-btn">18th Century</button>
         <div class="dropdown-container">
-            <a href="English18.html">English</a>
+            <a href="Sweden.html">Sweden</a>
+            <a href="English18.html">England</a>
             <a href="USA18.html">USA</a>
-            <a href="Dutch.html">Dutch</a>
+            <a href="Dutch.html">Netherlands</a>
             <a href="Germany.html">Germany</a>
             <a href="Austria.html">Austria</a>
             <a href="Spain.html">Spain</a>
-            <a href="Sweden.html">Sweden</a>
+          
         </div>
 
                 <!-- Dropdown 7 -->
