--- a/ClassicGreek.html
+++ b/ClassicGreek.html
@@ -703,7 +703,7 @@ text-align: center; /* Centers text horizontally */
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
