--- a/ClassicRoman.html
+++ b/ClassicRoman.html
@@ -699,7 +699,7 @@ text-align: center; /* Centers text horizontally */
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
