--- a/MoorishSpain.html
+++ b/MoorishSpain.html
@@ -691,7 +691,7 @@ text-align: center; /* Centers text horizontally */
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
