--- a/Formal.html
+++ b/Formal.html
@@ -737,7 +737,7 @@ Adding a variety in height to the garden </p>
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
