--- a/Sweden.html
+++ b/Sweden.html
@@ -702,7 +702,7 @@ Histroically the grounds have been used for breeding horses, and began its royal
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
