--- a/Austria.html
+++ b/Austria.html
@@ -717,7 +717,7 @@ The origins of the Augarten in Vienna are of the floodplain of the Danube river,
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
