--- a/Roman.html
+++ b/Roman.html
@@ -710,7 +710,7 @@ text-align: center; /* Centers text horizontally */
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
