--- a/Florentine.html
+++ b/Florentine.html
@@ -714,7 +714,7 @@ earth toned stones, regionally sourced is an excellent way to achieve the relaxe
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
