--- a/RoseGardens.html
+++ b/RoseGardens.html
@@ -863,7 +863,7 @@ Marquette Park Rose Garden</p>
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
