--- a/NewEngland.html
+++ b/NewEngland.html
@@ -750,7 +750,7 @@ List on the National Register of Historuc Places, the home of John S. Phipps was
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 <script>
