--- a/USACapital.html
+++ b/USACapital.html
@@ -140,9 +140,9 @@ text-align: center; /* Centers text horizontally */
 <nav>
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-  <button class="dropbtn" href="Home.html" class="active">Home</button>
+  <button class="dropbtn" href="Home.html" class="active">Main</button>
     <div class="dropdown-content">
-            <a href="Home.html">Home</a>
+            <a href="Home.html">Main</a>
          <a href="History.html"></a>
                     </div>
                   </div>
@@ -636,13 +636,14 @@ text-align: center; /* Centers text horizontally */
                 <!-- Dropdown 6 -->
         <button class="dropdown-btn">18th Century</button>
         <div class="dropdown-container">
+           <a href="Sweden.html">Sweden</a>
             <a href="English18.html">English</a>
             <a href="USA18.html">USA</a>
-            <a href="Dutch.html">Dutch</a>
+            <a href="Dutch.html">Netherlands</a>
             <a href="Germany.html">Germany</a>
             <a href="Austria.html">Austria</a>
             <a href="Spain.html">Spain</a>
-            <a href="Sweden.html">Sweden</a>
+       
         </div>
 
                 <!-- Dropdown 7 -->
@@ -702,7 +703,7 @@ text-align: center; /* Centers text horizontally */
 
         </div>
         <a href="contact.html">Contact</a>
-        <a href="Citations.html">Citations</a>
+        <a href="Citations.html">References</a>
 
 </div>
 
