--- a/GardenDesign.html
+++ b/GardenDesign.html
@@ -622,15 +622,16 @@ text-align: center; /* Centers text horizontally */
 
 
                 <!-- Dropdown 6 -->
-        <button class="dropdown-btn">18th Century</button>
+    <button class="dropdown-btn">18th Century</button>
         <div class="dropdown-container">
+           <a href="Sweden.html">Sweden</a>
             <a href="English18.html">English</a>
             <a href="USA18.html">USA</a>
-            <a href="Dutch.html">Dutch</a>
+            <a href="Dutch.html">Netherlands</a>
             <a href="Germany.html">Germany</a>
             <a href="Austria.html">Austria</a>
             <a href="Spain.html">Spain</a>
-            <a href="Sweden.html">Sweden</a>
+       
         </div>
 
                 <!-- Dropdown 7 -->
