--- a/Bridal Bouquets.html
+++ b/Bridal Bouquets.html
@@ -451,7 +451,7 @@ text-align: center; /* Centers text horizontally */
 </div></div>
 
 
-  <p> <h1> The Okanagan is bursting with blooms and brides! Here are some reputable florists that will bring life to your your wedding venue: 
+  <p> <h1> The Okanagan is bursting with blooms and brides! Here are some reputable florists that will bring life to your wedding venue: 
  </h1> </p>
   
     <div class="row">
