--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ text-align: center; /* Centers text horizontally */
 <section>
           <h2 id="features"></h2> 
           <p>
-<img src="LogoKFG.jpg" alt="Centered Image" style="display: block; margin: auto;" width=500" height="500">
+<img src="KFGLogo.jpg" alt="Centered Image" style="display: block; margin: auto;" width=500" height="500">
 </p>
          <p>Kelowna Flower Gardens aims to bring together local gardeners who are passionate about caring for their community in the form of creating masterful works in raising a variety of species of flowers.</p>
 
