--- a/Contact.html
+++ b/Contact.html
@@ -485,7 +485,7 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Profile Header -->
     <div class="profile-header">
-      <img src="KelownaFlowerGardensCircle.jpg" alt=""width="250" height="250">
+      <img src="KFGLogo.jpg" alt=""width="250" height="250">
         
         </div>
 
