--- a/Contact.html
+++ b/Contact.html
@@ -485,18 +485,21 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Profile Header -->
     <div class="profile-header">
-      <img src="KFGLogo.jpg" alt=""width="250" height="250">
-        
+         <div class="left">
+        <div class="profile-image" style="background-image: style="background-image: url=('kelownaflowergardens')"; 
+        <div> <img src="KFGLogo.jpg" alt="" width="250" hegiht="250">
         </div>
+    </div>
+       
 
         <div class="profile-info">
+              <div class="right">
             <h2>Kelowna Flower Gardens</h2>
 
             <div class="profile-actions">
                 <button>Edit Profile</button>
                 <button>Share Profile</button>
             </div>
-
             <div class="profile-stats">
                 <div><strong>126</strong> posts</div>
                 <div><strong>1,500</strong> followers</div>
